<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Lokalisierung">

    </PreferenceCategory>

    <PreferenceCategory app:title="Verhalten">
        <SwitchPreferenceCompat
            app:key="display_on"
            app:summaryOff="Normales Display verhalten"
            app:summaryOn="Display eingeschaltet"
            app:title="Display während der Nutzung eingeschaltet lassen" />
    </PreferenceCategory>

    <Preference
        app:key="feedback"
        app:title="Feedback geben"
        app:summary="@string/preferences_feedback_summary"/>


</PreferenceScreen>